# dp-sim

./: .envrc  .gitignore  README.md  anafi4k.drone  docker-compose.yaml  photo-byte  pyproject.toml  requirements.txt  test_gpu.py
comm/: position_10.csv  position_8.csv  position_9.csv  positions.csv
demos/: camera-information-extraction.ipynb  create_qrcode.ipynb  csv_read_test.ipynb  data.csv  deploy_fixed.py  deploy_mobile.py  enhancement.ipynb  event_listener_try1.ipynb  final-demo-Senior1.ipynb  final.ipynb  first_test.py  meeting_2.ipynb  meeting_3.ipynb  meeting_4.ipynb  meeting_5.ipynb  meeting_6.ipynb  meeting_7.ipynb  photo_from_gz.ipynb  plot.ipynb  qrcode.ipynb  random.ipynb  random_episode_3.csv  random_episode_4.csv  random_episode_5.csv  random_episode_6.csv  random_episode_7.csv  random_episode_8.csv  rl_training-sphinx.ipynb  rl_training.ipynb  rl_training.py  rl_training_deployment.ipynb  rl_training_mobile.ipynb  rl_training_static.ipynb  senior2.py  target_distribution.ipynb  target_positions.csv  training.py
demos/fixed_targets_logs/: 1.monitor.csv  3.monitor.csv  4.monitor.csv
demos/forever_fixed_targets_logs/: 3_monitor.csv
demos/logs/: 1.monitor.csv  2.monitor.csv  3.monitor.csv  4.monitor.csv  5.monitor.csv  6.monitor.csv  7.monitor.csv
demos/measurements_random/: random_episode_1.csv  random_episode_10.csv  random_episode_2.csv  (+1 more)
examples/: moveby2.py  olympe_keyboard.py  streaming2.py
libgazebo7/: Dockerfile  compile.sh
worlds/: custom.world  deployment_small.world  empty.world  pics.world  static.world  target_stationary.world  training_custom.world  training_final.world  training_static.world  training_static_no_model.world
(+95 files in other folders)
