[tool.poetry]
name = "dp-sim"
version = "0.1.0"
description = "The Python packages required to run the Design Project simulation and RL training"
authors = ["Daniel Izham <daniel.izham@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
jsonrpclib-pelix = "^0.4.3"
jupyter = "^1.0.0"
opencv-python = "^4.5.5"
pynput = "^1.7.6"
PySimpleGUI = "^4.57.0"
pyzbar = "^0.1.8"
qrcode = "^7.3.1"
scipy = "^1.8.0"
stable-baselines3 = "^1.4.0"
torchvision = "^0.11.3"
torch = "^1.10.2"
tensorboard = "^2.8.0"
PySDL2 = "^0.9.11"
PyOpenGL = "^3.1.6"
parrot-olympe = {path = "parrot_olympe-0.0.0-202203141719-py3-none-manylinux_2_31_aarch64.whl"}
protobuf = "3.6"

[tool.poetry.dev-dependencies]
poethepoet = "^0.12.3"

[tool.poe.tasks]
force-cuda11 = "pip3 install torch==1.10.2+cu113 torchvision==0.11.3+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
